@@ -69,6 +69,9 @@ INCOMPATIBLES CHANGES:
   on default generation of error message container
 - refactored MoneyFormat class to better correspond to Builder Pattern standard; theoretically, might affect existing
   code
+- refactored SingleElements editor retrieval functions to accept arguments of type E extends DbBeanEditorInterface
+  instead of E extends DbBeanEditor ; the change does not strictly speaking introduce an incompatibility, but any
+  calling code should probably be recompiled
 
 All generated code from version 2.2 must be regenerated. In editable files, overloaded functions related to file
 handling, data validation and naming and ordering beans should be checked.
